syntax = "proto3";

package gitlab.secret_detection;

/* We keep generated files within grpc namespace i.e Gitlab::SecretDetection::GRPC
 * so that these files are exported too in the Ruby Gem along with Core and GRPC logic.
 */
option ruby_package = "Gitlab::SecretDetection::GRPC";

// Either provide rule type or a particular value to allow during the scan
message Exclusion {
  ExclusionType exclusion_type = 1;
  string value = 2;
}

enum ExclusionType {
  EXCLUSION_TYPE_UNSPECIFIED = 0;
  EXCLUSION_TYPE_RULE = 1; // Rule ID to exclude
  EXCLUSION_TYPE_RAW_VALUE = 2; // Raw value to exclude
  EXCLUSION_TYPE_PATH = 3; // Specific file path to exclude
  EXCLUSION_TYPE_REGEX_PATTERN = 4; // Regular expression to exclude
}

/* Request arg for triggering Scan/ScanStream method */
message ScanRequest {
  message Payload {
    string id = 1;
    string data = 2;
    optional int32 offset = 3;
  }

  repeated Payload payloads = 1; // Array of payloads to scan
  // Scan timeout on the entire request. Value is represented in seconds, accepts float values to represent
  // smaller unit values. Default is 180 seconds.
  optional float timeout_secs = 2;
  // Scan timeout on each payload . Value is represented in seconds, accepts float values to represent smaller
  // unit values. Default is 30 seconds.
  optional float payload_timeout_secs = 3;
  repeated Exclusion exclusions = 4; // Optional. Array of rule-types/raw-values to exclude from being considered during scan.
  repeated string tags = 5; // Optional. Array of rule tags to consider for scan. Ex: ["gitlab_blocking"]
}

/* Response from Scan/ScanStream method */
/* Any changes to these definitions must be matched by changes in the Core classes that correspond to them */
message ScanResponse {
  // Represents a secret finding identified within a payload
  message Finding {
    string payload_id = 1;
    int32 status = 2;
    optional string type = 3;
    optional string description = 4;
    optional int32 line_number = 5;
  }

  // Return status code in sync with ::SecretDetection::Status
  enum Status {
    STATUS_UNSPECIFIED = 0;
    STATUS_FOUND = 1;              // one or more findings
    STATUS_FOUND_WITH_ERRORS = 2;  // one or more findings along with some errors
    STATUS_SCAN_TIMEOUT = 3;       // whole scan timeout
    STATUS_PAYLOAD_TIMEOUT = 4;       // single payload timeout
    STATUS_SCAN_ERROR = 5;         // internal scan failure
    STATUS_INPUT_ERROR = 6;        // invalid input failure
    STATUS_NOT_FOUND = 7;          // zero findings
    STATUS_AUTH_ERROR = 8;         // authentication failure
  }

  repeated Finding results = 1;
  int32 status = 2;
  repeated Exclusion applied_exclusions = 3;
}

/* Scanner service that scans given payloads and returns findings */
service Scanner {
  // Runs secret detection scan for the given request
  rpc Scan(ScanRequest) returns (ScanResponse) {}

  // Runs bi-directional streaming of scans for the given stream of requests with a stream of responses
  rpc ScanStream(stream ScanRequest) returns (stream ScanResponse) {}
}
